# sushi-back

./: .env.test  .gitignore  pyproject.toml
app/: komesushiapp.db  main.py
app/configs/: database.py
app/models/: authModel.py  baseModel.py  sushiModel.py
app/repositories/: adminRepository.py  authRepository.py  sqlRepository.py  sushiRepository.py  userRepository.py
app/routers/: adminRouter.py  authRouter.py  sushiRouter.py  userRouter.py
app/schemas/: authSchemas.py  sushiSchemas.py  userSchemas.py
back_sushi/: main.py
back_sushi/configs/: Environment.py  database.py
back_sushi/models/: sushi.py
